--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,9 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
+    interval: live
   open-pull-requests-limit: 1
+  automerged_updates:
+    - match:
+        dependency_type: "all"
+        update_type: "all"
