--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dogger/cli",
-  "version": "1.0.67",
+  "version": "1.0.68",
   "description": "",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -17,6 +17,10 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dogger/cli.git"
+  },
   "bin": {
     "dogger": "./bin/dogger",
     "dogger-compose": "./bin/dogger-compose"
