--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@dogger/cli",
-  "version": "1.0.69",
+  "version": "1.0.70",
   "description": "",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
     "clean": "rimraf ./dist",
-    "run:windows": "npm run build:windows && npm link && SET DOGGER_CLI_DEV=true && dogger plan ls",
-    "build:windows": "npm run clean && tsc && copy package.json .\\dist\\metadata.json /Y && npm publish --dry-run",
-    "build": "npm run clean && tsc && cp package.json ./dist/metadata.json --no-target-directory && npm publish --dry-run",
+    "start": "npm run build && npm link && SET DOGGER_CLI_DEV=true && dogger plan ls",
+    "build": "npm run clean && tsc && shx cp ./package.json ./dist/metadata.json && npm publish --dry-run",
     "link": "npm link",
     "unlink": "npm unlink",
     "test": "jest --coverage --runInBand",
@@ -40,9 +39,10 @@
     "jest": "^26.1.0",
     "jest-when": "^2.7.2",
     "rimraf": "^3.0.1",
+    "shx": "^0.3.2",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.6"
   },
   "dependencies": {
     "array-flat-polyfill": "^1.0.1",
