--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@dogger/cli",
-  "version": "1.0.71",
+  "version": "1.0.72",
   "description": "",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "start": "npm run build && npm link && SET DOGGER_CLI_DEV=true && dogger plan ls",
+    "clean": "shx rm -rf ./dist",
+    "start": "npm run build && npm link --force && SET DOGGER_CLI_DEV=true && dogger",
     "build": "npm run clean && tsc && shx cp ./package.json ./dist/metadata.json && npm publish --dry-run",
     "link": "npm link",
     "unlink": "npm unlink",
     "test": "jest --coverage --runInBand",
     "test:watch": "jest --coverage --watchAll --runInBand",
-    "swagger": "rimraf ./src/api/openapi && docker run --rm -e JAVA_OPTS=\"-Dio.swagger.parser.util.RemoteUrl.trustAll=true -Dio.swagger.v3.parser.util.RemoteUrl.trustAll=true\" -v %cd%:/local openapitools/openapi-generator-cli:v4.2.3 generate -i https://host.docker.internal:14567/swagger/v1/swagger.json -g typescript-fetch -o src/api/openapi --additional-properties=\"useSingleRequestParameter=false\" -o /local/src/api/openapi"
+    "swagger": "shx rm -rf ./src/api/openapi && docker run --rm -e JAVA_OPTS=\"-Dio.swagger.parser.util.RemoteUrl.trustAll=true -Dio.swagger.v3.parser.util.RemoteUrl.trustAll=true\" -v %cd%:/local openapitools/openapi-generator-cli:v4.2.3 generate -i https://host.docker.internal:14567/swagger/v1/swagger.json -g typescript-fetch -o src/api/openapi --additional-properties=\"useSingleRequestParameter=false\" -o /local/src/api/openapi"
   },
   "author": "",
   "license": "ISC",
